modified text classification with TFIDF approach

--- a/Module 5 NLP/Text Classification - Sentiment Analysis.ipynb
+++ b/Module 5 NLP/Text Classification - Sentiment Analysis.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "17                        ketchup was good.  Positive"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,19 +257,19 @@
       "text/plain": [
        "CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
        "                dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
-       "                lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "                lowercase=True, max_df=1.0, max_features=None, min_df=2,\n",
        "                ngram_range=(1, 2), preprocessor=None,\n",
-       "                stop_words=['yet', 'six', 'along', 'both', 'yourselves',\n",
-       "                            'beyond', 'rather', 'what', 'sixty', 'perhaps',\n",
-       "                            'together', 'where', 'therefore', 'fire',\n",
-       "                            'anything', 'thereafter', 'although', 'when', 'get',\n",
-       "                            'sometimes', 'any', 'due', 'though', 'ours', 'much',\n",
-       "                            'something', 'forty', 'we', 'others', 'cry', ...],\n",
+       "                stop_words=['becoming', 'most', 'for', 'empty', 'moreover',\n",
+       "                            'same', 'made', 'had', 'an', 'himself', 'besides',\n",
+       "                            'interest', 'sometime', 'throughout', 'as', 'ltd',\n",
+       "                            'there', 'con', 'ie', 'seem', 'many', 'thereafter',\n",
+       "                            'or', 'neither', 'couldnt', 'he', 'perhaps', 'than',\n",
+       "                            'amount', 'bottom', ...],\n",
        "                strip_accents=None, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
        "                tokenizer=None, vocabulary=None)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,15 +282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62\n",
-      "['amazing', 'amazing love', 'bad', 'bad dirty', 'bad eat', 'boss', 'boss monster', 'burger', 'burger amazing', 'burger bad', 'delicious', 'delicious love', 'delivered', 'delivered late', 'delivery', 'dirty', 'dirty hate', 'dirty tables', 'eat', 'eat burger', 'food', 'food delicious', 'food delivered', 'food good', 'good', 'good food', 'good time', 'great', 'great good', 'great love', 'hate', 'hate burger', 'hate dirty', 'hate late', 'icecream', 'icecream not', 'juice', 'juice good', 'juice not', 'ketchup', 'ketchup bad', 'ketchup good', 'late', 'late delivery', 'late hate', 'love', 'love pizza', 'monster', 'monster hate', 'not', 'not bad', 'not good', 'pizza', 'pizza burger', 'pizza great', 'pizza not', 'table', 'table bad', 'tables', 'time', 'wife', 'wife love']\n"
+      "18\n",
+      "['bad', 'burger', 'burger bad', 'dirty', 'food', 'good', 'great', 'hate', 'icecream', 'icecream not', 'juice', 'ketchup', 'love', 'love pizza', 'not', 'not bad', 'not good', 'pizza']\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "(18, 18)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "                       warm_start=False)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "array(['Positive'], dtype=object)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "array(['Negative'], dtype=object)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "array(['Positive'], dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "array(['Negative'], dtype=object)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "array(['Negative'], dtype=object)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "array(['Positive'], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
        "array(['Negative'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "array(['Positive'], dtype=object)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,10 +542,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -555,18 +553,18 @@
        "                input='content', lowercase=True, max_df=1.0, max_features=None,\n",
        "                min_df=2, ngram_range=(1, 2), norm='l2', preprocessor=None,\n",
        "                smooth_idf=True,\n",
-       "                stop_words=['yet', 'six', 'along', 'both', 'yourselves',\n",
-       "                            'beyond', 'rather', 'what', 'sixty', 'perhaps',\n",
-       "                            'together', 'where', 'therefore', 'fire',\n",
-       "                            'anything', 'thereafter', 'although', 'when', 'get',\n",
-       "                            'sometimes', 'any', 'due', 'though', 'ours', 'much',\n",
-       "                            'something', 'forty', 'we', 'others', 'cry', ...],\n",
+       "                stop_words=['becoming', 'most', 'for', 'empty', 'moreover',\n",
+       "                            'same', 'made', 'had', 'an', 'himself', 'besides',\n",
+       "                            'interest', 'sometime', 'throughout', 'as', 'ltd',\n",
+       "                            'there', 'con', 'ie', 'seem', 'many', 'thereafter',\n",
+       "                            'or', 'neither', 'couldnt', 'he', 'perhaps', 'than',\n",
+       "                            'amount', 'bottom', ...],\n",
        "                strip_accents=None, sublinear_tf=False,\n",
        "                token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b', tokenizer=None, use_idf=True,\n",
        "                vocabulary=None)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -597,10 +595,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -616,10 +612,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -627,7 +621,7 @@
        "(18, 18)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,10 +633,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -664,7 +656,7 @@
        "                       verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +677,7 @@
        "array(['Positive'], dtype=object)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -707,13 +699,71 @@
        "array([[0.2, 0.8]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.predict_proba(new_doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Naive Bayes Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "model = MultinomialNB()\n",
+    "model.fit(x_new,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Positive'], dtype='<U8')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_doc = ['i love kfc chicken and it is tasty.']\n",
+    "new_doc = tfidf.transform(new_doc)\n",
+    "model.predict(new_doc)"
    ]
   },
   {
