--- a/Batch2/code - Combined Cycle Power Plant - Linear Regression.ipynb
+++ b/Batch2/code - Combined Cycle Power Plant - Linear Regression.ipynb
@@ -552,6 +552,293 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ANOVA - f test\n",
+    "    for a confidence Interval = 95%, CI = 0.95\n",
+    "        alpha = 1 - CI = 1 - 0.95 = 0.05\n",
+    "        \n",
+    "    - if pvalue > alpha = accept the null hypothesis -> Feature is not informative\n",
+    "    - if pvalue < alpha = reject the null hypothesis -> feature is informative / important"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AT 0.0\n",
+      "V 0.0\n",
+      "AP 0.0\n",
+      "RH 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = ['AT', 'V', 'AP', 'RH']\n",
+    "xnum = df[nums]\n",
+    "y = df['PE']\n",
+    "\n",
+    "from sklearn.feature_selection import f_regression\n",
+    "fvalue,pvalue = f_regression(xnum,y)\n",
+    "\n",
+    "for i in range(len(nums)):print(nums[i],pvalue[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df[['AT', 'V', 'AP', 'RH']]\n",
+    "y = df['PE']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Feature Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AT</th>\n",
+       "      <th>V</th>\n",
+       "      <th>AP</th>\n",
+       "      <th>RH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14.96</td>\n",
+       "      <td>41.76</td>\n",
+       "      <td>1024.07</td>\n",
+       "      <td>73.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25.18</td>\n",
+       "      <td>62.96</td>\n",
+       "      <td>1020.04</td>\n",
+       "      <td>59.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5.11</td>\n",
+       "      <td>39.40</td>\n",
+       "      <td>1012.16</td>\n",
+       "      <td>92.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20.86</td>\n",
+       "      <td>57.32</td>\n",
+       "      <td>1010.24</td>\n",
+       "      <td>76.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10.82</td>\n",
+       "      <td>37.50</td>\n",
+       "      <td>1009.23</td>\n",
+       "      <td>96.62</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      AT      V       AP     RH\n",
+       "0  14.96  41.76  1024.07  73.17\n",
+       "1  25.18  62.96  1020.04  59.08\n",
+       "2   5.11  39.40  1012.16  92.14\n",
+       "3  20.86  57.32  1010.24  76.64\n",
+       "4  10.82  37.50  1009.23  96.62"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9527, 4)\n",
+      "(7621, 4)\n",
+      "(1906, 4)\n",
+      "(9527,)\n",
+      "(7621,)\n",
+      "(1906,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "xtrain,xtest,ytrain,ytest = train_test_split(x,y,test_size=0.2,random_state=5)\n",
+    "print(x.shape)\n",
+    "print(xtrain.shape)\n",
+    "print(xtest.shape)\n",
+    "print(y.shape)\n",
+    "print(ytrain.shape)\n",
+    "print(ytest.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Apply ML - Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "model = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# train the model using train dataset\n",
+    "model.fit(xtrain,ytrain)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Performance Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([455.72522393])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data = [[19.07,49.69,1007.22,76.79]]\n",
+    "model.predict(new_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the predictions for test data\n",
+    "ypred = model.predict(xtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9302847464353333"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "metrics.r2_score(ytest,ypred)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
