updated the code with ML modelling and performance

--- a/Batch2/Telecom deliquency prediction.ipynb
+++ b/Batch2/Telecom deliquency prediction.ipynb
@@ -2449,7 +2449,9 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2523,12 +2525,551 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    171147\n",
+       "0     22916\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(194063, 15)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    170257\n",
+      "0     22835\n",
+      "Name: label, dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = df2[df.medianmarechprebal90<=df2.medianmarechprebal90.quantile(0.995)]\n",
+    "print(df2.label.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(193092, 15)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label                  -2.364355\n",
+       "aon                     0.962522\n",
+       "daily_decr30            3.799383\n",
+       "rental90                4.398001\n",
+       "last_rech_date_ma       3.624316\n",
+       "last_rech_amt_ma        3.901708\n",
+       "cnt_ma_rech30           2.716288\n",
+       "sumamnt_ma_rech30       3.794188\n",
+       "fr_ma_rech90            2.306060\n",
+       "medianamnt_ma_rech90    3.662271\n",
+       "medianmarechprebal90    3.678199\n",
+       "medianamnt_loans30      4.603280\n",
+       "amnt_loans90            3.081431\n",
+       "maxamnt_loans90         1.629290\n",
+       "payback90               6.792362\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.skew()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.label.value_coun"
+    "x = df2.drop(['label'],axis=1)\n",
+    "y = df2['label']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>aon</th>\n",
+       "      <th>daily_decr30</th>\n",
+       "      <th>rental90</th>\n",
+       "      <th>last_rech_date_ma</th>\n",
+       "      <th>last_rech_amt_ma</th>\n",
+       "      <th>cnt_ma_rech30</th>\n",
+       "      <th>sumamnt_ma_rech30</th>\n",
+       "      <th>fr_ma_rech90</th>\n",
+       "      <th>medianamnt_ma_rech90</th>\n",
+       "      <th>medianmarechprebal90</th>\n",
+       "      <th>medianamnt_loans30</th>\n",
+       "      <th>amnt_loans90</th>\n",
+       "      <th>maxamnt_loans90</th>\n",
+       "      <th>payback90</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>272.0</td>\n",
+       "      <td>3055.050000</td>\n",
+       "      <td>260.13</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1539</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3078.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1539.0</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>29.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>712.0</td>\n",
+       "      <td>12122.000000</td>\n",
+       "      <td>3691.26</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>5787</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5787.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5787.0</td>\n",
+       "      <td>61.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>535.0</td>\n",
+       "      <td>1398.000000</td>\n",
+       "      <td>900.13</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1539</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1539.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1539.0</td>\n",
+       "      <td>66.32</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>241.0</td>\n",
+       "      <td>21.228000</td>\n",
+       "      <td>159.42</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>947</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>947.0</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>947.0</td>\n",
+       "      <td>150.619333</td>\n",
+       "      <td>1098.90</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2309</td>\n",
+       "      <td>7</td>\n",
+       "      <td>20029.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2888.0</td>\n",
+       "      <td>35.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     aon  daily_decr30  rental90  last_rech_date_ma  last_rech_amt_ma  \\\n",
+       "0  272.0   3055.050000    260.13                2.0              1539   \n",
+       "1  712.0  12122.000000   3691.26               20.0              5787   \n",
+       "2  535.0   1398.000000    900.13                3.0              1539   \n",
+       "3  241.0     21.228000    159.42               41.0               947   \n",
+       "4  947.0    150.619333   1098.90                4.0              2309   \n",
+       "\n",
+       "   cnt_ma_rech30  sumamnt_ma_rech30  fr_ma_rech90  medianamnt_ma_rech90  \\\n",
+       "0              2             3078.0            21                1539.0   \n",
+       "1              1             5787.0             0                5787.0   \n",
+       "2              1             1539.0             0                1539.0   \n",
+       "3              0                0.0             0                 947.0   \n",
+       "4              7            20029.0             2                2888.0   \n",
+       "\n",
+       "   medianmarechprebal90  medianamnt_loans30  amnt_loans90  maxamnt_loans90  \\\n",
+       "0                  7.50                 0.0            12                6   \n",
+       "1                 61.04                 0.0            12               12   \n",
+       "2                 66.32                 0.0             6                6   \n",
+       "3                  2.50                 0.0            12                6   \n",
+       "4                 35.00                 0.0            42                6   \n",
+       "\n",
+       "   payback90  \n",
+       "0  29.000000  \n",
+       "1   0.000000  \n",
+       "2   0.000000  \n",
+       "3   0.000000  \n",
+       "4   2.333333  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### train test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(193092, 14)\n",
+      "(154473, 14)\n",
+      "(38619, 14)\n",
+      "(193092,)\n",
+      "(154473,)\n",
+      "(38619,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "xtr,xts,ytr,yts = train_test_split(x,y,test_size=0.2,random_state=5,stratify=y)\n",
+    "print(x.shape)\n",
+    "print(xtr.shape)\n",
+    "print(xts.shape)\n",
+    "print(y.shape)\n",
+    "print(ytr.shape)\n",
+    "print(yts.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8817403103183975 0.8817398509771934 0.881742147647531\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y.mean(),ytr.mean(),yts.mean())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Apply ML - Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\anshu\\AppData\\Roaming\\Python\\Python37\\site-packages\\sklearn\\linear_model\\_logistic.py:765: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression()\n",
+    "model.fit(xtr,ytr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Performance analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ypred = model.predict(xts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8816903596675212"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "metrics.accuracy_score(yts,ypred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>65</td>\n",
+       "      <td>4502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>67</td>\n",
+       "      <td>33985</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    0      1\n",
+       "0  65   4502\n",
+       "1  67  33985"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(metrics.confusion_matrix(yts,ypred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.49      0.01      0.03      4567\n",
+      "           1       0.88      1.00      0.94     34052\n",
+      "\n",
+      "    accuracy                           0.88     38619\n",
+      "   macro avg       0.69      0.51      0.48     38619\n",
+      "weighted avg       0.84      0.88      0.83     38619\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(metrics.classification_report(yts,ypred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
