--- a/Batch2/Telecom deliquency prediction.ipynb
+++ b/Batch2/Telecom deliquency prediction.ipynb
@@ -25,18 +25,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\anshu\\AppData\\Roaming\\Python\\Python37\\site-packages\\numpy\\_distributor_init.py:32: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\anshu\\AppData\\Roaming\\Python\\Python37\\site-packages\\numpy\\.libs\\libopenblas.GK7GX5KEQ4F6UYO3P26ULGBQYHGQO7J4.gfortran-win_amd64.dll\n",
-      "C:\\Users\\anshu\\AppData\\Roaming\\Python\\Python37\\site-packages\\numpy\\.libs\\libopenblas.NOIJJG62EMASZI6NYURL6JBKM4EVBGM7.gfortran-win_amd64.dll\n",
-      "  stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -2338,9 +2327,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2366,10 +2355,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 55,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2384,7 +2371,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2397,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2393,7 @@
        "(194063, 15)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2421,9 +2408,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2449,9 +2434,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2485,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2494,7 +2477,7 @@
        "5253.0"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2505,7 +2488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2514,7 +2497,7 @@
        "1146.402700000002"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2525,10 +2508,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2538,7 +2519,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2549,7 +2530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2558,7 +2539,7 @@
        "(194063, 15)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2569,10 +2550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 63,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2599,7 +2578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2608,7 +2587,7 @@
        "(193092, 15)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2619,10 +2598,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2645,7 +2622,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2656,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2673,9 +2650,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 86,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2835,13 +2812,187 @@
        "4   2.333333  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>aon</th>\n",
+       "      <th>daily_decr30</th>\n",
+       "      <th>rental90</th>\n",
+       "      <th>last_rech_date_ma</th>\n",
+       "      <th>last_rech_amt_ma</th>\n",
+       "      <th>cnt_ma_rech30</th>\n",
+       "      <th>sumamnt_ma_rech30</th>\n",
+       "      <th>fr_ma_rech90</th>\n",
+       "      <th>medianamnt_ma_rech90</th>\n",
+       "      <th>medianmarechprebal90</th>\n",
+       "      <th>medianamnt_loans30</th>\n",
+       "      <th>amnt_loans90</th>\n",
+       "      <th>maxamnt_loans90</th>\n",
+       "      <th>payback90</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.775614</td>\n",
+       "      <td>-0.273813</td>\n",
+       "      <td>-0.581079</td>\n",
+       "      <td>-0.444173</td>\n",
+       "      <td>-0.204678</td>\n",
+       "      <td>-0.488430</td>\n",
+       "      <td>-0.478533</td>\n",
+       "      <td>1.074078</td>\n",
+       "      <td>-0.132060</td>\n",
+       "      <td>-0.564447</td>\n",
+       "      <td>-0.24649</td>\n",
+       "      <td>-0.460583</td>\n",
+       "      <td>-0.342288</td>\n",
+       "      <td>2.363010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.112431</td>\n",
+       "      <td>0.699221</td>\n",
+       "      <td>0.007204</td>\n",
+       "      <td>1.520577</td>\n",
+       "      <td>1.687001</td>\n",
+       "      <td>-0.722586</td>\n",
+       "      <td>-0.196397</td>\n",
+       "      <td>-0.616556</td>\n",
+       "      <td>2.068979</td>\n",
+       "      <td>-0.130540</td>\n",
+       "      <td>-0.24649</td>\n",
+       "      <td>-0.460583</td>\n",
+       "      <td>2.464332</td>\n",
+       "      <td>-0.428926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.244806</td>\n",
+       "      <td>-0.451642</td>\n",
+       "      <td>-0.471348</td>\n",
+       "      <td>-0.335020</td>\n",
+       "      <td>-0.204678</td>\n",
+       "      <td>-0.722586</td>\n",
+       "      <td>-0.638817</td>\n",
+       "      <td>-0.616556</td>\n",
+       "      <td>-0.132060</td>\n",
+       "      <td>-0.087749</td>\n",
+       "      <td>-0.24649</td>\n",
+       "      <td>-0.683091</td>\n",
+       "      <td>-0.342288</td>\n",
+       "      <td>-0.428926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.838181</td>\n",
+       "      <td>-0.599392</td>\n",
+       "      <td>-0.598346</td>\n",
+       "      <td>3.812785</td>\n",
+       "      <td>-0.468301</td>\n",
+       "      <td>-0.956743</td>\n",
+       "      <td>-0.799100</td>\n",
+       "      <td>-0.616556</td>\n",
+       "      <td>-0.438796</td>\n",
+       "      <td>-0.604969</td>\n",
+       "      <td>-0.24649</td>\n",
+       "      <td>-0.460583</td>\n",
+       "      <td>-0.342288</td>\n",
+       "      <td>-0.428926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.586727</td>\n",
+       "      <td>-0.585507</td>\n",
+       "      <td>-0.437268</td>\n",
+       "      <td>-0.225867</td>\n",
+       "      <td>0.138211</td>\n",
+       "      <td>0.682353</td>\n",
+       "      <td>1.286876</td>\n",
+       "      <td>-0.455543</td>\n",
+       "      <td>0.566904</td>\n",
+       "      <td>-0.341577</td>\n",
+       "      <td>-0.24649</td>\n",
+       "      <td>0.651954</td>\n",
+       "      <td>-0.342288</td>\n",
+       "      <td>-0.204288</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        aon  daily_decr30  rental90  last_rech_date_ma  last_rech_amt_ma  \\\n",
+       "0 -0.775614     -0.273813 -0.581079          -0.444173         -0.204678   \n",
+       "1  0.112431      0.699221  0.007204           1.520577          1.687001   \n",
+       "2 -0.244806     -0.451642 -0.471348          -0.335020         -0.204678   \n",
+       "3 -0.838181     -0.599392 -0.598346           3.812785         -0.468301   \n",
+       "4  0.586727     -0.585507 -0.437268          -0.225867          0.138211   \n",
+       "\n",
+       "   cnt_ma_rech30  sumamnt_ma_rech30  fr_ma_rech90  medianamnt_ma_rech90  \\\n",
+       "0      -0.488430          -0.478533      1.074078             -0.132060   \n",
+       "1      -0.722586          -0.196397     -0.616556              2.068979   \n",
+       "2      -0.722586          -0.638817     -0.616556             -0.132060   \n",
+       "3      -0.956743          -0.799100     -0.616556             -0.438796   \n",
+       "4       0.682353           1.286876     -0.455543              0.566904   \n",
+       "\n",
+       "   medianmarechprebal90  medianamnt_loans30  amnt_loans90  maxamnt_loans90  \\\n",
+       "0             -0.564447            -0.24649     -0.460583        -0.342288   \n",
+       "1             -0.130540            -0.24649     -0.460583         2.464332   \n",
+       "2             -0.087749            -0.24649     -0.683091        -0.342288   \n",
+       "3             -0.604969            -0.24649     -0.460583        -0.342288   \n",
+       "4             -0.341577            -0.24649      0.651954        -0.342288   \n",
+       "\n",
+       "   payback90  \n",
+       "0   2.363010  \n",
+       "1  -0.428926  \n",
+       "2  -0.428926  \n",
+       "3  -0.428926  \n",
+       "4  -0.204288  "
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "sc = StandardScaler()\n",
+    "x2 = sc.fit_transform(x)\n",
+    "pd.DataFrame(x2,columns=x.columns).head()"
    ]
   },
   {
@@ -2853,7 +3004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -2871,7 +3022,7 @@
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "xtr,xts,ytr,yts = train_test_split(x,y,test_size=0.2,random_state=5,stratify=y)\n",
+    "xtr,xts,ytr,yts = train_test_split(x2,y,test_size=0.2,random_state=5,stratify=y)\n",
     "print(x.shape)\n",
     "print(xtr.shape)\n",
     "print(xts.shape)\n",
@@ -2882,7 +3033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2906,32 +3057,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 90,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\anshu\\AppData\\Roaming\\Python\\Python37\\site-packages\\sklearn\\linear_model\\_logistic.py:765: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "LogisticRegression()"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2951,7 +3086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2960,16 +3095,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8816903596675212"
+       "0.8813278438074523"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2981,8 +3116,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
+   "execution_count": 93,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3012,25 +3149,25 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>65</td>\n",
-       "      <td>4502</td>\n",
+       "      <td>86</td>\n",
+       "      <td>4481</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>67</td>\n",
-       "      <td>33985</td>\n",
+       "      <td>102</td>\n",
+       "      <td>33950</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    0      1\n",
-       "0  65   4502\n",
-       "1  67  33985"
+       "     0      1\n",
+       "0   86   4481\n",
+       "1  102  33950"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3041,7 +3178,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 94,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.2061154 ,  0.7011007 , -0.14554183, -0.11885065,  0.24775197,\n",
+       "         1.14614103, -0.09213392,  0.18196934,  0.07059035,  0.35341754,\n",
+       "         0.22258446,  1.00225465, -0.1454491 , -0.04313695]])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2, 12,  3,  6, 13,  8,  7,  0, 10,  4,  9,  1, 11,  5]],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argsort(model.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rental90\n",
+      "maxamnt_loans90\n",
+      "last_rech_date_ma\n",
+      "sumamnt_ma_rech30\n",
+      "payback90\n",
+      "medianamnt_ma_rech90\n",
+      "fr_ma_rech90\n",
+      "aon\n",
+      "medianamnt_loans30\n",
+      "last_rech_amt_ma\n",
+      "medianmarechprebal90\n",
+      "daily_decr30\n",
+      "amnt_loans90\n",
+      "cnt_ma_rech30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in np.argsort(model.coef_)[0]:\n",
+    "    print(x.columns[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.08598101])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.intercept_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### log(p/(1-p)) = m1x2 + m2x2+m3x3+....mnxn + c\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -3050,18 +3294,58 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.49      0.01      0.03      4567\n",
+      "           0       0.46      0.02      0.04      4567\n",
       "           1       0.88      1.00      0.94     34052\n",
       "\n",
       "    accuracy                           0.88     38619\n",
-      "   macro avg       0.69      0.51      0.48     38619\n",
-      "weighted avg       0.84      0.88      0.83     38619\n",
+      "   macro avg       0.67      0.51      0.49     38619\n",
+      "weighted avg       0.83      0.88      0.83     38619\n",
       "\n"
      ]
     }
    ],
    "source": [
     "print(metrics.classification_report(yts,ypred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0196"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2*0.49*0.01/0.50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9361702127659575"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.88*2*1/1.88"
    ]
   },
   {
